--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Book Store</title>
-        <style>
-body {
-  background-image: url("back.jpg");
-  background-repeat:repeat;
-  background-position: center;
-  background-size: cover;
-   height: 500px;
-}
-
-    </style>
+<link rel="stylesheet" href="style1.css">
     </head>
 
     <body>
@@ -32,6 +23,6 @@ body {
                 </tr>
             </table>
     </div>
-    
+
 </body>
 </html>
