added logo in index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <table>
                 <tr>
                     <td><a href="user_index.html">
-                            Login as User
+                        <img src="user.gif" alt="Login for User">
                         </a></td>
                     <td>|<a href="adminlogin.html">
-                            Login as Admin
+                        <img src="admin.gif" alt="Login as Admin">
                         </a></td>
                 </tr>
             </table>
