--- a/index.html
+++ b/index.html
@@ -5,24 +5,48 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Book Store</title>
-<link rel="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="style_index.css">
     </head>
 
     <body>
+        <div class="text">
+          <h1  id="title_tag">Welcome to book store</h1>
 
-        <h1 align="center">Welcome to book store.</h1>
-        <div align="center">
+          <p id="text_under">We are Going to Provide You Most of the types of Books which will you going to Enjoy.
+          So Let's Get Started What are you Waiting for !!!</p>
+
+          <table align="center" >
+            <tr>
+              <td  class="zoom1" id="text_book"><a href="Books.html">Action and Adventure</a></td>
+              <td class="zoom1" id="text_book"> <a href="Books.html">Classics</a>  </td>
+              <td class="zoom1" id="text_book"> <a href="Books.html">Comic Book</a> </td>
+              <td class="zoom1" id="text_book">  <a href="Books.html">Graphic and Novel</a> </td>
+              <td class="zoom1" id="text_book"> <a href="Books.html">Horror</a> </td>
+              <td class="zoom1" id="text_book"><a href="Books.html">Suspense and Thrillers</a> </td>
+            </tr>
+          </table>
+        </div>
+
+        <div align="center" >
             <table>
                 <tr>
-                    <td><a href="user_index.html">
-                        <img src="user.gif" alt="Login for User">
+                    <td><a  href="user_index.html">
+                        <img class="zoom"  id="set" src="user.gif" alt="Login for User">
                         </a></td>
-                    <td>|<a href="adminlogin.html">
-                        <img src="admin.gif" alt="Login as Admin">
+                    <td><a href="adminlogin.html">
+                        <img class="zoom"  id="set" src="admin.gif" alt="Login as Admin">
                         </a></td>
                 </tr>
             </table>
+            <h2  id="title_tag">“Why is it that people who wouldn't dream of stealing anything else think it's perfectly all right to steal books?”</h2>
     </div>
-
+            <table align="center">
+              <th colspan="3" id="set2" >Popular Books</th>
+              <tr>
+                <td> <img id="set1" src="book_1.jpg" alt=""> </td>
+                <td> <img id="set1" src="book_2.jpg" alt=""></td>
+                <td> <img id="set1" src="book_3.jpg" alt=""></td>
+              </tr>
+            </table>
 </body>
 </html>
