--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
           <table align="center" >
             <tr>
-              <td  class="zoom1" id="text_book"><a href="Books.html">Action and Adventure</a></td>
-              <td class="zoom1" id="text_book"> <a href="Books.html">Classics</a>  </td>
-              <td class="zoom1" id="text_book"> <a href="Books.html">Comic Book</a> </td>
-              <td class="zoom1" id="text_book">  <a href="Books.html">Graphic and Novel</a> </td>
-              <td class="zoom1" id="text_book"> <a href="Books.html">Horror</a> </td>
-              <td class="zoom1" id="text_book"><a href="Books.html">Suspense and Thrillers</a> </td>
+              <td  class="zoom1" id="text_book"><a href="book_back.html">Action and Adventure</a></td>
+              <td class="zoom1" id="text_book"> <a href="books_back.html">Comic Book</a> </td>
+              <td class="zoom1" id="text_book"> <a href="books_back.html">Classics</a>  </td>
+              <td class="zoom1" id="text_book">  <a href="books_back.html">Graphic and Novel</a> </td>
+              <td class="zoom1" id="text_book"> <a href="books_back.html">Horror</a> </td>
+              <td class="zoom1" id="text_book"><a href="books_back.html">Suspense and Thrillers</a> </td>
             </tr>
           </table>
         </div>
