--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <td class="zoom1" id="text_book">  <a href="book_back.html">Graphic and Novel</a> </td>
               <td class="zoom1" id="text_book"> <a href="book_back.html">Horror</a> </td>
               <td class="zoom1" id="text_book"><a href="book_back.html">Suspense and Thrillers</a> </td>
+              <td class="zoom1" id="text_book"><a href="logout.html">Logout</a></td>
             </tr>
           </table>
         </div>
