--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Book Store</title>
-        <link rel="stylesheet" href="style_index.css">
+        <link rel="stylesheet" href="css/style_index.css">
+        <script type="text/javascript" src="js/js_index.js">
+        </script>
     </head>
 
-    <body>
+    <body id="body">
         <div class="text">
           <h1  id="title_tag">Welcome to book store</h1>
 
-          <p id="text_under">We are Going to Provide You Most of the types of Books which will you going to Enjoy.
-          So Let's Get Started What are you Waiting for !!!</p>
+          <p id="text_under"><b>We are Going to Provide You Most of the types of Books which will you going to Enjoy.
+          So Let's Get Started What are you Waiting for !!!</b></p>
 
           <table align="center" >
             <tr>
@@ -32,10 +34,10 @@
             <table>
                 <tr>
                     <td><a  href="user_index.html">
-                        <img class="zoom"  id="set" src="user.gif" alt="Login for User">
+                        <img class="zoom"  id="set" src="images/user.gif" alt="Login for User">
                         </a></td>
                     <td><a href="adminlogin.html">
-                        <img class="zoom"  id="set" src="admin.gif" alt="Login as Admin">
+                        <img class="zoom"  id="set" src="images/admin.gif" alt="Login as Admin">
                         </a></td>
                 </tr>
             </table>
@@ -44,9 +46,9 @@
             <table align="center">
               <th colspan="3" id="set2" >Popular Books</th>
               <tr>
-                <td> <img id="set1" src="book_1.jpg" alt=""> </td>
-                <td> <img id="set1" src="book_2.jpg" alt=""></td>
-                <td> <img id="set1" src="book_3.jpg" alt=""></td>
+                <td> <img id="set1" src="images/book_1.jpg" alt=""> </td>
+                <td> <img id="set1" src="images/book_2.jpg" alt=""></td>
+                <td> <img id="set1" src="images/book_3.jpg" alt=""></td>
               </tr>
             </table>
 </body>
