--- a/user_index.html
+++ b/user_index.html
@@ -5,18 +5,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login Page</title>
+        <link rel="stylesheet" href="css/style_user_index.css">
+        <link href="css/elements.css" rel="stylesheet">
+        <script src="js/js_signup.js"></script>
+        <script src="js/js_passcheck.js"></script>
     </head>
 
-    <body>
-        <table align="center">
-            <tr>
-                <td><img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5LVITugTe-2fRszm1PkQiGKWevHEeR9oAxm9nlFuG1io8xgw&s"
-                        alt=""></td>
-            </tr>
+    <body id="body" style="overflow:hidden;">
+        <div><img id="set1" src="images/user_img.webp" alt="image is not avialable"></div>
+        <table align="center" class="set2" border="1px solid red">
             <tr>
                 <td>
-                    <h1>Login into BookStore</h1>
+                    <h1 align="center">User Login</h1>
                 </td>
             </tr>
             <form action="home.html">
@@ -37,11 +37,25 @@
                     <td><input id="sub" type="submit" value="Log In"></td>
                 </tr>
             </form>
-            <tr>
-                <td><a href="forgottpass.html">forgott password?</a></td>
-                <td> <a href="signup.html">sign up?</a> </td>
-            </tr>
         </table>
+        <div class="set_22">
+            <button id='bt' onclick="div_pass()" >forgot password?</button>
+            <button id='bt' onclick="div_show()">Sign Up</button>
+        </div>
+        <div id="abc">
+        <div id="popupContact">
+        <form   id="form" method="post" name="form">
+        <img id="close" src="images/download.jpg" onclick ="div_hide()">
+        <h2>Sign Up</h2>
+        <hr>
+        <input id="name" name="name" placeholder="Name" type="text" required>
+        <input id="email" name="email" placeholder="Email" type="email" required>
+        <input id="psw_1" type="password" placeholder="Enter Password" name="psw" required>
+        <input id="psw_2" type="password" placeholder="Repeat Password" name="psw-repeat" size="50" required>
+        <br><br>
+        <a onclick="check_empty()"  id="submit">Sign Up</a>
+        </form>
+        </div>
+        </div>
     </body>
-
 </html>
