--- a/adminlogin.html
+++ b/adminlogin.html
@@ -8,38 +8,44 @@
         <link rel="stylesheet" href="css/style_adminlogin.css">
     </head>
 
-    <body>
-      <div class="outer">
-          <h1 align="center" >Admin Login</h1>
+    <body class="hero-image">
+<div >
+    <div class="outer">
+        <h1 align="center">Admin Login</h1>
         <div class='inner1'>
-            <table >
+            <table>
                 <form action="admin_index.html">
                     <tr>
-                        <td><h3 align="center">Username</h3></td>
+                        <td>
+                            <h3 align="center">Username</h3>
+                        </td>
                     </tr>
                     <tr>
                         <td><input size="30" type="text" name="adminuser" required></td>
                     </tr>
                     <tr>
-                        <td><h3 align="center"> Password</h4></td>
+                        <td>
+                            <h3 align="center"> Password</h4>
+                        </td>
                     </tr>
                     <tr>
                         <td><input size="30" type="password" required></td>
                     </tr>
                     <tr>
-                        <td ><input type="submit" value="Login"></td>
+                        <td><input type="submit" value="Login"></td>
                     </tr>
                 </form>
             </table>
-            <div id="set1"><a  href="index.html">Back to Home</a></div>
-          </div>
-            <div class="inner2">
-              <img src="images/admin_img.webp" alt="image is not available">
-            </div>
-            <a id="set2" href="forgot_pass_admin.html">Forgott Password?</a>
-
+            <div id="set1"><a href="index.html">Back to Home</a></div>
         </div>
+        <div class="inner2">
+            <img src="images/admin_img.webp" alt="image is not available">
+        </div>
+        <a id="set2" href="forgot_pass_admin.html">Forgott Password?</a>
+    
+    </div>
 
+</div>
 
 
     </body>
