--- a/favourite.html
+++ b/favourite.html
@@ -4,17 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favourites</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 </head>
 <body>
     <h1>your favourite books, </h1>
-    <nav>
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="favourite.html">Fvourites</a></li>
-            <li><a href="download.html">Downloads</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="logout.html">Logout</a></li>
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary"">
+                    <button class=" navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="favourite.html">Favourites</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="download.html">Downloads</a>
+            </li>
+    
+            <li class="nav-item">
+                <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="logout.html">Logout</a>
+            </li>
+    
         </ul>
+        <span class="navbar-text">
+            <img src="images/book.png" alt="image is not available">
+        </span>
+        </div>
     </nav>
     <ul>
         <li>book1</li>
