--- a/forgottpass.html
+++ b/forgottpass.html
@@ -6,14 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fotgott Password</title>
     </head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <STYle>
         div{
             margin: 300px;
             margin-top: 200px;
         }
+        .hero-image {
+  background-image: url("images/concept-design-children-education_29937-4567.jpg");
+  background-position: center;
+  background-repeat: repeat;
+  position: relative;
+}
     </STYle>
-    <body>
-        <nav>
+    <body class="hero-image">
+
+        <!-- <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="favourite.html">Fvourites</a></li>
@@ -21,25 +32,54 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="logout.html">Logout</a></li>
             </ul>
+        </nav> -->
+        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary"">
+                <button class=" navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="favourite.html">Favourites</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="download.html">Downloads</a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="logout.html">Logout</a>
+                    </li>
+
+                </ul>
+                <span class="navbar-text">
+                    <img src="images/book.png" alt="image is not available">
+                </span>
+            </div>
         </nav>
     <div>
         <form action="reset.html">
-            <table align="center">
-                <tr>
+            <table align="center" class="table table-sm">
+                <tr class="table-primary">
                     <td>
                         <h3>Fotgott Password</h3>
                     </td>
                 </tr>
-                <tr>
+                <tr  class="table-success">
                     <td><label for="Email">Enter a email id:</label></td>
                 </tr>
         
-                <tr>
+                <tr class="table-primary">
                     <td>
-                        <p><input type="email" name="email" value="abc@gmail.com" size="50" required></p>
+                        <p><input type="email" name="email" placeholder="abc@gmail.com" size="50" required></p>
                     </td>
                 </tr>
-                <tr>
+                <tr  class="table-success">
                     <td><input type="submit" name="submit" value="Send Link"></td>
                 </tr>
             </table>
