--- a/index.html
+++ b/index.html
@@ -1,55 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Book Store</title>
-        <link rel="stylesheet" href="css/style_index.css">
-        <script type="text/javascript" src="js/js_index.js">
-        </script>
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Store</title>
+    <link rel="stylesheet" href="css/style_index.css">
+    <script type="text/javascript" src="js/js_index.js">
+    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  </head>
 
-    <body id="body">
-        <div class="text">
-          <h1  id="title_tag">Welcome to book store</h1>
+  <body id="body">
+    <div class="text">
+      <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark"">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="book_back.html">Action and Adventure</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book_back.html">Comic Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book_back.html">Graphic and NoveComic Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book_back.html">Horror</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="book_back.html">Suspense and Thrillers</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+      <h1 id="title_tag">Welcome to book store</h1>
 
-          <p id="text_under"><b>We are Going to Provide You Most of the types of Books which will you going to Enjoy.
+      <p id="text_under"><b>We are Going to Provide You Most of the types of Books which will you going to Enjoy.
           So Let's Get Started What are you Waiting for !!!</b></p>
 
-          <table align="center" >
-            <tr>
-              <td  class="zoom1" id="text_book"><a href="book_back.html">Action and Adventure</a></td>
-              <td class="zoom1" id="text_book"> <a href="book_back.html">Comic Book</a> </td>
-              <td class="zoom1" id="text_book"> <a href="book_back.html">Classics</a>  </td>
-              <td class="zoom1" id="text_book">  <a href="book_back.html">Graphic and Novel</a> </td>
-              <td class="zoom1" id="text_book"> <a href="book_back.html">Horror</a> </td>
-              <td class="zoom1" id="text_book"><a href="book_back.html">Suspense and Thrillers</a> </td>
-              <td class="zoom1" id="text_book"><a href="logout.html">Logout</a></td>
-            </tr>
-          </table>
-        </div>
-
-        <div align="center" >
-            <table>
-                <tr>
-                    <td><a  href="user_index.html">
-                        <img class="zoom"  id="set" src="images/user.gif" alt="Login for User">
-                        </a></td>
-                    <td><a href="adminlogin.html">
-                        <img class="zoom"  id="set" src="images/admin.gif" alt="Login as Admin">
-                        </a></td>
-                </tr>
-            </table>
-            <h2  id="title_tag">“Why is it that people who wouldn't dream of stealing anything else think it's perfectly all right to steal books?”</h2>
+      <!-- <table align="center">
+        <tr>
+          <td class="zoom1" id="text_book"><a href="book_back.html">Action and Adventure</a></td>
+          <td class="zoom1" id="text_book"> <a href="book_back.html">Comic Book</a> </td>
+          <td class="zoom1" id="text_book"> <a href="book_back.html">Classics</a> </td>
+          <td class="zoom1" id="text_book"> <a href="book_back.html">Graphic and Novel</a> </td>
+          <td class="zoom1" id="text_book"> <a href="book_back.html">Horror</a> </td>
+          <td class="zoom1" id="text_book"><a href="book_back.html">Suspense and Thrillers</a> </td>
+          <td class="zoom1" id="text_book"><a href="logout.html">Logout</a></td>
+        </tr>
+      </table> -->
     </div>
-            <table align="center">
-              <th colspan="3" id="set2" >Popular Books</th>
-              <tr>
-                <td> <img id="set1" src="images/book_1.jpg" alt=""> </td>
-                <td> <img id="set1" src="images/book_2.jpg" alt=""></td>
-                <td> <img id="set1" src="images/book_3.jpg" alt=""></td>
-              </tr>
-            </table>
-</body>
+
+    
+
+    <div align="center">
+      <table>
+        <tr>
+          <td><a href="user_index.html">
+              <img class="zoom" id="set" src="images/user.gif" alt="Login for User">
+            </a></td>
+          <td><a href="adminlogin.html">
+              <img class="zoom" id="set" src="images/admin.gif" alt="Login as Admin">
+            </a></td>
+        </tr>
+      </table>
+      <h2 id="title_tag">“Why is it that people who wouldn't dream of stealing anything else think it's perfectly all
+        right to steal books?”</h2>
+    </div>
+    <table align="center">
+      <th colspan="3" id="set2">Popular Books</th>
+      <tr>
+        <td> <img id="set1" src="images/book_1.jpg" alt=""> </td>
+        <td> <img id="set1" src="images/book_2.jpg" alt=""></td>
+        <td> <img id="set1" src="images/book_3.jpg" alt=""></td>
+      </tr>
+    </table>
+  </body>
+
 </html>
